# codara-eyes

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.host.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/vision-worker/: .env.example  Dockerfile  README.md  pyproject.toml
apps/vision-worker/app/: capture.py  db.py  deepseek.py  dom_elements.py  imaging.py  main.py  models.py  queue.py  repository.py  scoring.py  services.py  vision.py  worker.py
apps/vision-worker/tests/: test_deepseek.py  test_dom_elements.py  test_scoring.py  test_vision.py
apps/web/: Dockerfile  drizzle.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/compare/: page.tsx
apps/web/components/: analysis-detail.tsx  dashboard.tsx  logout-button.tsx  score-card.tsx  section-card.tsx  status-badge.tsx  status-pill.tsx
apps/web/db/: index.ts  migrate.mjs  projects.ts  queue.ts  schema.ts
apps/web/lib/: auth.ts  comparison.ts  env.ts  scores.ts  storage.ts
apps/web/scripts/: seed-job.mjs
docs/: README.md  analysis-detail.html  arquitetura.md  backlog.md  compare.html  contratos-de-dados.md  criterios-de-aceite-mvp.md  dashboard.html  decisoes-de-stack.md  deploy-e-ambientes.md  escopo-do-produto.md  login.html  modelo-de-dominio.md  pipeline-de-analise.md  riscos-e-mitigacoes.md  roadmap-futuro.md
infra/: backup.sh  restore.sh
infra/caddy/: Caddyfile
(+13 files in other folders)
