[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codara-eyes-vision-worker"
version = "0.1.0"
description = "Vision worker do Codara Eyes"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "psycopg[binary]>=3.2.0",
  "playwright==1.48.0",
  "pillow>=10.4.0",
  "opencv-contrib-python-headless>=4.10.0",
  "pytesseract>=0.3.13",
  "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
